syntax = "proto3";

package chat_server_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "https://github.com/isergos/chat_server/pkg/chat_server_v1;chat_server_v1";

service ChatServerV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
  repeated string user_names = 1;
}

message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64  id = 1;
}

message MessageInfo {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message SendMessageRequest {
  MessageInfo messageInfo = 1;
}